<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bosdyn_auto_return_api_msgs</name>
  <version>0.1.0</version>
  <description>ROS 2 interoperability support for Boston Dynamics Spot SDK auto-return APIs</description>
  <maintainer email="engineering@theaiinstitute.com">BD AI Institute</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>proto2ros</depend>
  <depend>bosdyn_api_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
