# Copyright (c) 2023 Boston Dynamics AI Institute LLC. All rights reserved.
cmake_minimum_required(VERSION 3.12)
project(bosdyn_msgs)

find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)

find_package(bosdyn_api_msgs REQUIRED)
find_package(bosdyn_spot_api_msgs REQUIRED)
find_package(bosdyn_spot_cam_api_msgs REQUIRED)
find_package(bosdyn_graph_nav_api_msgs REQUIRED)
find_package(bosdyn_mission_api_msgs REQUIRED)
find_package(bosdyn_autowalk_api_msgs REQUIRED)
find_package(bosdyn_auto_return_api_msgs REQUIRED)
find_package(bosdyn_keepalive_api_msgs REQUIRED)
find_package(bosdyn_log_status_api_msgs REQUIRED)
find_package(bosdyn_metrics_logging_api_msgs REQUIRED)

ament_python_install_package(${PROJECT_NAME})

ament_export_dependencies(bosdyn_api_msgs)
ament_export_dependencies(bosdyn_spot_api_msgs)
ament_export_dependencies(bosdyn_spot_cam_api_msgs)
ament_export_dependencies(bosdyn_graph_nav_api_msgs)
ament_export_dependencies(bosdyn_mission_api_msgs)
ament_export_dependencies(bosdyn_autowalk_api_msgs)
ament_export_dependencies(bosdyn_auto_return_api_msgs)
ament_export_dependencies(bosdyn_keepalive_api_msgs)
ament_export_dependencies(bosdyn_log_status_api_msgs)
ament_export_dependencies(bosdyn_metrics_logging_api_msgs)

ament_package()
