<?xml version="1.0"?>
<!--
Copyright (c) 2023-2024 Boston Dynamics AI Institute LLC. All rights reserved.
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bosdyn_msgs</name>
  <version>4.1.0</version>
  <description>ROS 2 interoperability support for Boston Dynamics Spot SDK APIs</description>
  <maintainer email="engineering@theaiinstitute.com">BD AI Institute</maintainer>
  <license>MIT</license>

  <exec_depend>bosdyn_api_msgs</exec_depend>
  <exec_depend>bosdyn_auto_return_api_msgs</exec_depend>
  <exec_depend>bosdyn_autowalk_api_msgs</exec_depend>
  <exec_depend>bosdyn_graph_nav_api_msgs</exec_depend>
  <exec_depend>bosdyn_keepalive_api_msgs</exec_depend>
  <exec_depend>bosdyn_log_status_api_msgs</exec_depend>
  <exec_depend>bosdyn_metrics_logging_api_msgs</exec_depend>
  <exec_depend>bosdyn_mission_api_msgs</exec_depend>
  <exec_depend>bosdyn_spot_api_msgs</exec_depend>
  <exec_depend>bosdyn_spot_cam_api_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
