<?xml version="1.0"?>
<!--
Copyright (c) 2023 Boston Dynamics AI Institute LLC. All rights reserved.
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bosdyn_spot_api_msgs</name>
  <version>4.0.0</version>
  <description>Boston Dynamics Spot API ROS 2 interfaces</description>
  <maintainer email="engineering@theaiinstitute.com">BD AI Institute</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>bosdyn_cmake_module</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>bosdyn_api_msgs</depend>
  <depend>proto2ros</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
